--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "rc-slider": "^8.6.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
